--- a/grow/jobtest/templates/home.html
+++ b/grow/jobtest/templates/home.html
@@ -33,8 +33,8 @@
             <nav class="text-center">
                 <ul class="list-inline">
                     <li class="list-inline-item"><a href="#" class="text-white">Test</a></li>
-                    <li class="list-inline-item"><a href="#" class="text-white">Signup</a></li>
-                    <li class="list-inline-item"><a href="#" class="text-white">Login</a></li>
+                    <li class="list-inline-item"><a href="{% url 'accounts:signup' %}" class="text-white">Signup</a></li>
+                    <li class="list-inline-item"><a href="{% url 'accounts:login' %}" class="text-white">Login</a></li>
                 </ul>
             </nav>
         </div>
