--- a/grow/accounts/templates/registration/pwd_change_form.html
+++ b/grow/accounts/templates/registration/pwd_change_form.html
@@ -1,14 +1,14 @@
-<!--accounts/templates/login.html-->
+<!--change your password-->
 
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>Login</h2>
+<h2>Change password</h2>
 
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Login">
+    <input type="submit" value="Change">
 </form>
 
 <a href="{% url 'accounts:dashboard' %}">Back to dashboard</a>
