updated the search functions

--- a/web_grow/jobtest-frontend/src/index.css
+++ b/web_grow/jobtest-frontend/src/index.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+/* body {
   background-color: #000300;
-}
+} */
 
 :root {
   --clr-neutral-100: hsl(0, 0%, 100%);
